<resources>
    <string name="app_name">Document Translator</string>
    <string name="banner_ad_unit_id">ca-app-pub-4146389542308743/2030131617</string>
    <string name="translate_document">Translate Document</string>
    <string name="translate">Translate</string>
    <string name="type_here">Type here...</string>
    <string name="welcome">Welcome</string>
    <string name="todo">TODO</string>


</resources>