<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".GoogleTranslate">


        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar2"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:background="?attr/colorPrimary"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:gravity="center"
            android:text="@string/translate_document"
            android:textSize="20sp"
            android:textStyle="bold"
            tools:layout_editor_absoluteX="0dp"
            tools:layout_editor_absoluteY="16dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:gravity="center"
        android:orientation="horizontal">

        <Spinner
            android:id="@+id/spinnerFrom"
            android:layout_width="129dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="17dp"
            tools:layout_editor_absoluteY="70dp" />

        <ImageButton
            android:id="@+id/imageButton"
            android:layout_width="70dp"
            android:layout_height="41dp"
            android:layout_marginStart="10dp"
            app:srcCompat="@drawable/ic_right"
            tools:ignore="SpeakableTextPresentCheck,TouchTargetSizeCheck"
            tools:layout_editor_absoluteX="181dp"
            tools:layout_editor_absoluteY="73dp"
            android:contentDescription="@string/todo" />

        <Spinner
            android:id="@+id/spinnerTo"
            android:layout_width="129dp"
            android:layout_height="43dp"
            android:layout_marginStart="10dp"
            tools:ignore="TouchTargetSizeCheck,SpeakableTextPresentCheck"
            tools:layout_editor_absoluteX="274dp"
            tools:layout_editor_absoluteY="73dp" />

    </LinearLayout>

        <TextView
        android:id="@+id/tvloader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold|italic" />

    <ProgressBar
        android:id="@+id/ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

        <Button
            android:id="@+id/btnTranslate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/translate"
            tools:layout_editor_absoluteX="146dp"
            tools:layout_editor_absoluteY="156dp" />

        <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/editTextTextMultiLine"
        android:layout_width="match_parent"
        android:layout_height="368dp"
        android:background="#424040"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/type_here"
        android:inputType="textMultiLine"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="24sp"
        tools:layout_editor_absoluteX="8dp"
        tools:layout_editor_absoluteY="211dp" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        app:adSize="BANNER"
        app:adUnitId="ca-app-pub-4146389542308743/2030131617"></com.google.android.gms.ads.AdView>

</LinearLayout>